[gd_scene load_steps=9 format=3 uid="uid://dt7elk36ldfbg"]

[ext_resource type="Script" path="res://Projects/Levels/Overworld/level_marker.gd" id="1_vg6g7"]
[ext_resource type="Texture2D" uid="uid://qgqvjijxph05" path="res://Assets/Map/Markers/Big/Marker White.png" id="2_mhiqo"]
[ext_resource type="Texture2D" uid="uid://c0elk1d0cex1a" path="res://Assets/Map/Markers/Hover.png" id="3_bwkg7"]
[ext_resource type="AudioStream" uid="uid://l1liciqrwh63" path="res://Assets/Music/UI SFX-Overworld-Hover LOOP.wav" id="5_wwm5f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tqeo"]
size = Vector2(46, 43)

[sub_resource type="Animation" id="Animation_ghvt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hover:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_15bcx"]
resource_name = "hover"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hover:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tciei"]
_data = {
"RESET": SubResource("Animation_ghvt3"),
"hover": SubResource("Animation_15bcx")
}

[node name="LevelMarker" type="Node2D"]
script = ExtResource("1_vg6g7")

[node name="Marker" type="Sprite2D" parent="."]
texture = ExtResource("2_mhiqo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_0tqeo")

[node name="Hover" type="TextureProgressBar" parent="."]
offset_left = -17.0
offset_top = -49.0
offset_right = 17.0
offset_bottom = 16.0
fill_mode = 3
texture_progress = ExtResource("3_bwkg7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tciei")
}

[node name="HoverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wwm5f")

[node name="HoverMusicEffects" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wwm5f")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
